tests/custom/STARIS_2022/basic/record-type-error/stderr.expected
Error:
    Parser error in file: record.essence Error is:
ValidatorError record.essence:3:18:
  |
3 | such that x[a] = true
  |                  ^^^^
Type error:
	Expected: int
	Got: bool

